--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0px;
     margin: 0px;
     overflow-x: hidden;
+    font-family: JosefinSans;
 }
 @font-face {
     font-family: "JosefinSans";
@@ -16,7 +17,6 @@
     align-self: center;
 }
 #first_text{
-    font-family: JosefinSans;
     font-size:15vh;
 
     align-self: center;
@@ -42,14 +42,25 @@
     margin-bottom: 20vh;
 }
 .option{
-    width: 39vw;
+    width: 37vw;
     height: 38vh;
+    padding-left: 1vw;
+    padding-right: 1vw;
     background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    transition: filter 0.3s,width .5s,opacity .1s;
+
+}
+.option:hover{
+    box-shadow: inset 0 0 7px black;
+    filter: invert(100);
+}
+.option img{
+    width: 7vw;
 }
 #biography_option{
     border-top-left-radius: 10px;
@@ -58,4 +69,13 @@
 #music_option{
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
+}
+.chosed_option{
+    width:80vw;
+    border-radius: 10px;
+}
+.unchosed_option{
+    width:0vw;
+    border-radius: 10px;
+    opacity: 0;
 }
